add results interpretation AI

--- a/backend/env.example
+++ b/backend/env.example
@@ -20,3 +20,10 @@ JWT_REFRESH_TOKEN_EXPIRES=2592000
 
 # CORS Configuration (comma-separated)
 CORS_ORIGINS=http://localhost:3000
+
+# AI Configuration (Google Gemini)
+GOOGLE_API_KEY=your_google_api_key_here
+ENABLE_AI_FEATURES=true
+AI_MODEL_NAME=gemini-1.5-flash
+AI_TEMPERATURE=0.7
+AI_MAX_TOKENS=16384 # Default for longer responses
