--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ Flask==3.1.1
 flask-cors==6.0.1
 Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==3.1.1
+google-generativeai==0.8.3
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -22,3 +23,4 @@ six==1.17.0
 statsmodels==0.14.5
 tzdata==2025.2
 Werkzeug==3.1.3
+google-generativeai==0.3.2
