--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,61 @@
-blinker==1.9.0
-boto3==1.35.0
-click==8.2.1
+# Core Flask Dependencies
 Flask==3.1.1
 flask-cors==6.0.1
 Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==3.1.1
-google-generativeai==0.8.3
+python-dotenv==1.0.0
+Werkzeug==3.1.3
+
+# Database
+psycopg2-binary==2.9.10
+Flask-Migrate==4.0.5
+
+# AWS S3
+boto3==1.35.0
+
+# Data Processing
+pandas==2.3.1
+numpy>=1.26.0,<2.0  # Compatible with matplotlib 3.8.2 (requires numpy<2)
+scipy==1.16.0
+statsmodels==0.14.5
+patsy==1.0.1
+
+# Visualization
+matplotlib==3.8.2
+
+# AI Integration
+google-generativeai==0.3.2
+
+# Production Server
+gunicorn==21.2.0
+
+# Caching (optional, for Redis)
+Flask-Caching==2.1.0
+redis==5.0.1
+
+# Rate Limiting (optional)
+Flask-Limiter==3.5.0
+
+# Request Validation (optional)
+marshmallow==3.20.1
+flask-marshmallow==0.15.0
+
+# Monitoring (optional)
+sentry-sdk[flask]==1.38.0
+
+# Testing (optional, for development)
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-flask==1.3.0
+
+# Utilities
+click==8.2.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-matplotlib==3.8.2
-numpy==2.3.1
+blinker==1.9.0
 packaging==25.0
-pandas==2.3.1
-patsy==1.0.1
-psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
 pytz==2025.2
-scipy==1.16.0
 six==1.17.0
-statsmodels==0.14.5
 tzdata==2025.2
-Werkzeug==3.1.3
-google-generativeai==0.3.2
