error logging and rate limiting

--- a/backend/env.example
+++ b/backend/env.example
@@ -27,3 +27,11 @@ ENABLE_AI_FEATURES=true
 AI_MODEL_NAME=gemini-1.5-flash
 AI_TEMPERATURE=0.7
 AI_MAX_TOKENS=16384 # Default for longer responses
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE=logs/causalytics.log
+
+# Rate Limiting Configuration
+RATE_LIMIT_DEFAULT=200 per day, 50 per hour
+REDIS_URL=redis://localhost:6379/0  # Use 'memory://' for in-memory storage
