--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 matplotlib==3.8.2
-numpy==2.3.1
+numpy<2.0,>=1.21
 packaging==25.0
 pandas==2.3.1
 patsy==1.0.1
@@ -23,4 +23,3 @@ six==1.17.0
 statsmodels==0.14.5
 tzdata==2025.2
 Werkzeug==3.1.3
-google-generativeai==0.3.2
