--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,25 +1,64 @@
+annotated-types==0.7.0
 blinker==1.9.0
 boto3==1.35.0
+botocore==1.35.99
+cachetools==6.2.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.2.1
+contourpy==1.3.3
+cycler==0.12.1
 Flask==3.1.1
 flask-cors==6.0.1
 Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==3.1.1
+fonttools==4.61.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.43.0
+google-auth-httplib2==0.2.1
 google-generativeai==0.8.3
+googleapis-common-protos==1.72.0
+grpcio==1.76.0
+grpcio-status==1.71.2
+gunicorn==25.1.0
+httplib2==0.31.0
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
+kiwisolver==1.4.9
 MarkupSafe==3.0.2
 matplotlib==3.8.2
-numpy<2.0,>=1.21
+numpy==1.26.4
 packaging==25.0
 pandas==2.3.1
 patsy==1.0.1
+pillow==12.0.0
+proto-plus==1.26.1
+protobuf==5.29.5
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.12.5
+pydantic_core==2.41.5
+PyJWT==2.10.1
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytz==2025.2
+requests==2.32.5
+rsa==4.9.1
+s3transfer==0.10.4
 scipy==1.16.0
 six==1.17.0
+SQLAlchemy==2.0.45
 statsmodels==0.14.5
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.6.1
 Werkzeug==3.1.3
