--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ boto3==1.35.0
 click==8.2.1
 Flask==3.1.1
 flask-cors==6.0.1
+gunicorn==25.1.0
 Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==3.1.1
 google-generativeai==0.8.3
